grammar.js
    program: $ => repeat(
      // TODO: other kinds of definitions
      choice(
        seq(
          $.keyword_with,
          $.cte,
          repeat(
            seq(
              ',',
              $.cte,
            ),
          ),
          $.statement,
        ),
        $.statement,
      )
    ),

    keyword_select: _ => make_keyword("select"),
    keyword_set: _ => make_keyword("set"),
    keyword_from: _ => make_keyword("from"),
    keyword_on: _ => make_keyword("on"),
    keyword_create: _ => make_keyword("create"),
    keyword_alter: _ => make_keyword("alter"),
    keyword_drop: _ => make_keyword("drop"),
    keyword_add: _ => make_keyword("add"),
    keyword_table: _ => make_keyword("table"),
    keyword_view: _ => make_keyword("view"),
    keyword_function: _ => make_keyword("function"),
    keyword_return: _ => make_keyword("return"),
    keyword_begin: _ => make_keyword("begin"),
    keyword_end: _ => make_keyword("end"),
    keyword_returns: _ => make_keyword("returns"),
    keyword_language: _ => make_keyword("language"),
    keyword_external: _ => make_keyword("external"),
    keyword_security: _ => make_keyword("security"),
    keyword_definer: _ => make_keyword("definer"),
    keyword_invoker: _ => make_keyword("invoker"),
    keyword_invoker: _ => make_keyword("invoker"),
    keyword_immutable: _ => make_keyword("immutable"),
    keyword_leakproof: _ => make_keyword("leakproof"),
    keyword_transform: _ => make_keyword("transform"),
    keyword_type: _ => make_keyword("type"),
    keyword_window: _ => make_keyword("window"),
    keyword_input: _ => make_keyword("input"),
    keyword_parallel: _ => make_keyword("parallel"),
    keyword_restricted: _ => make_keyword("restricted"),
    keyword_cost: _ => make_keyword("cost"),
    keyword_rows: _ => make_keyword("rows"),
    keyword_support: _ => make_keyword("support"),
    keyword_set: _ => make_keyword("set"),
    keyword_current: _ => make_keyword("current"),
    keyword_sql: _ => make_keyword("sql"),
    keyword_reads: _ => make_keyword("reads"),
    keyword_data: _ => make_keyword("data"),
    keyword_comment: _ => make_keyword("comment"),
    keyword_not: _ => make_keyword("not"),
    keyword_deterministic: _ => make_keyword("deterministic"),
    keyword_column: _ => make_keyword("column"),
    keyword_as: _ => make_keyword("as"),
    keyword_end: _ => make_keyword("end"),
    keyword_not: _ => make_keyword("not"),
    keyword_for: _ => make_keyword("for"),
    keyword_if: _ => make_keyword("if"),
    keyword_exists: _ => make_keyword("exists"),
    keyword_default: _ => make_keyword("default"),
    keyword_data: _ => make_keyword("data"),
    keyword_rename: _ => make_keyword("rename"),
    keyword_to: _ => make_keyword("to"),
    keyword_schema: _ => make_keyword("schema"),
    keyword_owner: _ => make_keyword("owner"),
    _not_null: $ => seq($.keyword_not, $.keyword_null),
    _primary_key: $ => seq($.keyword_primary, $.keyword_key),
    _if_exists: $ => seq($.keyword_if, $.keyword_exists),
    _if_not_exists: $ => seq($.keyword_if, $.keyword_not, $.keyword_exists),
    _default_null: $ => seq($.keyword_default, $.keyword_null),
    keyword_null: _ => make_keyword("null"),
    type: $ => choice(
      alias($._builtin_type, $.builtin),
      alias($._identifier, $.custom),
    ),

    _builtin_type: $ => choice(
      $._keyword_boolean,

      $._keyword_smallserial,
      $._keyword_serial,
      $._keyword_bigserial,
      $._keyword_smallint,
      $._keyword_int,

      $._bigint,
      $._decimal,
      $._numeric,
      $._keyword_real,
      $._double,

      $._keyword_money,

      $._char,
      $._varchar,
      $._keyword_text,

      $._keyword_uuid,

      $._keyword_json,
      $._keyword_jsonb,
      $._keyword_xml,

      $._keyword_bytea,

      $._keyword_date,
      $._keyword_datetime,
      $._keyword_timestamp,
      $._keyword_timestamptz,

      $._keyword_geometry,
      $._keyword_geography,
      $._keyword_box2d,
      $._keyword_box3d,

      $._bigint,
      $._char,
      $._varchar,
      $._decimal,
      $._numeric,
    ),

    comment: _ => /--.*\n/,
    statement: $ => seq(
      choice(
        $._select_statement,
        $._delete_statement,
        $._create_statement,
        $._alter_statement,
        $._drop_statement,
        $._insert_statement,
        $._update_statement,
      ),
      ';',
    ),

    _select_statement: $ => seq(
      $.select,
      optional($.from),
      repeat(
        seq(
          choice(
            seq(
              $.keyword_union,
              optional($.keyword_all),
            ),
            $.keyword_except,
            $.keyword_intersect,
          ),
          $.select,
          optional($.from),
        ),
      ),
    ),

    select: $ => seq(
      $.keyword_select,
      choice(
        seq(
          optional($.keyword_distinct),
          $.select_expression,
        ),
        seq(
          $.keyword_distinct,
          '(',
          $.select_expression,
          ')',
        ),
      ),
    ),

    select_expression: $ => choice(
      seq(
        $._field,
        optional($._alias),
        repeat(
          seq(
            ',',
            $._field,
            optional($._alias),
          ),
        ),
      ),
    ),

    _delete_statement: $ => seq(
      $.delete,
      alias($._delete_from, $.from),
      optional($.returning),
    ),

    _create_statement: $ => seq(
      choice(
        $.create_table,
        $.create_view,
        $.create_materialized_view,
        $.create_function,
        $.create_type,
        // TODO type, sequence
      ),
    ),

    create_function: $ => seq(
      $.keyword_create,
      $.keyword_function,
      optional($._if_not_exists),
      $.function_reference,
      $.function_arg_definitions,
      $.function_returns,
      $.function_attributes,
    ),

    function_arg_definitions: $ => seq(
      '(',
      optional(
        $._function_arg_defintions,
      ),
      ')',
    ),

    _function_arg_defintions: $ => seq(
      $.function_arg_defintion,
      optional(
        repeat1(
          seq(
            ',',
            $.function_arg_defintion,
          ),
        ),
      ),
    ),

    function_arg_defintion: $ => seq(
      optional(field('name', $.identifier)),
      $.type,
      optional(seq(
        choice("=", $.keyword_default),
        $._expression,
      )),
    ),

    function_returns: $ => seq(
      $.keyword_returns,
      choice(
        $.type,
        $._function_returns_table,
      )
    ),

    _function_returns_table: $ => seq(
      $.keyword_table,
      $.column_definitions,
    ),

    function_attributes: $ => repeat1(choice(
      $.function_language,
      $._function_attributes_postgres,
      $._function_attributes_mysql,
      $.function_definition,
      $.function_body,
    )),

    function_language: $ => seq(
      $.keyword_language,
      field('language', $.identifier),
    ),

    _function_attributes_postgres: $ => choice(
      $._function_postgres_transfroms,
      alias($._function_postgres_window, $.function_window),
      alias($._function_postgres_behavior, $.function_behavior),
      alias($._function_postgres_leakproof, $.function_leakproof),
      alias($._function_postgres_null_inputs, $.function_null_inputs),
      alias($._function_postgres_security, $.function_security),
      alias($._function_postgres_parallel, $.function_parallel),
      alias($._function_postgres_cost, $.function_cost),
      alias($._function_postgres_rows, $.function_rows),
      alias($._function_postgres_support, $.function_support),
      alias($._function_postgres_set, $.function_set),
    ),

    _function_attributes_mysql: $ => choice(
      alias($._function_mysql_security, $.function_security),
      alias($._function_mysql_behavior, $.function_behavior),
      alias($._function_mysql_comment, $.function_comment),
      alias($._function_mysql_deterministic, $.function_deterministic),
    ),

    function_body: $ => choice(
      seq($.keyword_return, $._expression),
      $.function_block,
    ),

    function_block: $ => seq(
      $.keyword_begin,
      repeat1($.statement),
      $.keyword_end,
    ),

    function_definition: $ => seq(
      $.keyword_as,
      choice(
        seq(
          alias($.string, $.obj_file),
          ",",
          alias($.string, $.link_symbol),
        ),
        $._string_function_definition,
        $._dollar_sign_function_definition,
      )
    ),

    _string_function_definition: $ =>
      alias($.string, $.raw_function_definition),

    _dollar_sign_function_definition: $ =>
      seq("$$", alias(/[^$$]*/, $.raw_function_definition), "$$"),

    _alter_statement: $ => seq(
      choice(
        $.alter_table,
        $.alter_view,
      ),
    ),

    alter_table: $ => seq(
      $.keyword_alter,
      $.keyword_table,
      optional($._if_exists),
      $.table_reference,
      choice(
        seq(
          choice(
            $.add_column,
            $.alter_column,
            $.drop_column,
          ),
          repeat(
            seq(
              ",",
              choice(
                $.add_column,
                $.alter_column,
                $.drop_column,
              )
            )
          )
        ),
        // some operations may not be chained to others
        $.rename_object,
        $.rename_column,
        $.set_schema,
        $.change_ownership,
      ),
    ),

    add_column: $ => seq(
      $.keyword_add,
      $.keyword_column,
      optional($._if_not_exists),
      $.column_definition,
    ),

    alter_column: $ => seq(
      // TODO constraint management
      $.keyword_alter,
      $.keyword_column,
      field('name', $.identifier),
      choice(
        seq(
          choice(
            $.keyword_set,
            $.keyword_drop,
          ),
          $.keyword_not,
          $.keyword_null,
        ),
        seq(
          optional(
            seq(
              $.keyword_set,
              $.keyword_data,
            ),
          ),
          $.keyword_type,
          $.type,
        ),
        seq(
          $.keyword_set,
          $.keyword_default,
          $._expression,
        ),
        seq(
          $.keyword_drop,
          $.keyword_default,
        ),
      ),
    ),

    drop_column: $ => seq(
      $.keyword_drop,
      $.keyword_column,
      optional($._if_exists),
      field('name', $.identifier),
    ),

    rename_column: $ => seq(
      $.keyword_rename,
      optional(
        $.keyword_column,
      ),
      field('old_name', $.identifier),
      $.keyword_to,
      field('new_name', $.identifier),
    ),

    alter_view: $ => seq(
      $.keyword_alter,
      $.keyword_view,
      optional($._if_exists),
      $.table_reference,
      choice(
        // TODO Postgres allows a single "alter column" to set or drop default
        $.rename_object,
        $.rename_column,
        $.set_schema,
        $.change_ownership,
      ),
    ),

    _drop_statement: $ => seq(
      choice(
        $.drop_table,
        $.drop_view,
      ),
    ),

    rename_object: $ => seq(
      $.keyword_rename,
      $.keyword_to,
      $.table_reference,
    ),

    set_schema: $ => seq(
      $.keyword_set,
      $.keyword_schema,
      field('schema', $.identifier),
    ),

    change_ownership: $ => seq(
      $.keyword_owner,
      $.keyword_to,
      $.identifier,
    ),

    table_reference: $ => $._reference,

    function_reference: $ => $._reference,

    _reference: $ => seq(
      optional(
        seq(
          field('schema', $.identifier),
          '.',
        ),
      ),
      field('name', $.identifier),
    ),

    _insert_statement: $ => seq(
      $.insert,
      optional($.returning),
    ),

    _update_statement: $ => seq(
      $.update,
      optional($.returning),
    ),

    column_definitions: $ => seq(
      '(',
      $.column_definition,
      repeat(
        seq(',', $.column_definition),
      ),
      optional($.constraints),
      ')',
    ),

    column_definition: $ => seq(
      field('name', $.identifier),
      $.type,
      choice(
        optional($._not_null),
        optional($._default_null),
      ),
      optional($.keyword_auto_increment),
      optional($._primary_key),
      optional($.direction),
    ),

    _field: $ => seq(
      choice(
        $._expression,
        $.all_fields,
      ),
    ),

    field: $ => seq(
      optional(
        seq(
          optional(
            seq(
              field('schema', $.identifier),
              '.',
            ),
          ),
          field('table_alias', $.identifier),
          '.',
        ),
      ),
      field('name', $.identifier),
    ),

    _alias: $ => choice(
      field('alias', $.identifier),
      seq(
        $.keyword_as,
        field('alias', $.identifier),
      ),
    ),

    predicate: $ => choice(
      ...[
        ['+', 'binary_plus'],
        ['-', 'binary_plus'],
        ['*', 'binary_times'],
        ['/', 'binary_times'],
        ['%', 'binary_times'],
        ['^', 'binary_exp'],
        ['=', 'binary_relation'],
        ['<', 'binary_relation'],
        ['<=', 'binary_relation'],
        ['!=', 'binary_relation'],
        ['>=', 'binary_relation'],
        ['>', 'binary_relation'],
        [seq($.keyword_is, $.keyword_distinct, $.keyword_from), 'binary_relation'],
        [seq($.keyword_is, $.keyword_not, $.keyword_distinct, $.keyword_from), 'binary_relation'],
        [$.keyword_and, 'clause_connective'],
        [$.keyword_or, 'clause_connective'],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ),
      prec.left('binary_in', seq(
        field('left', $._expression),
        field('operator', $.keyword_in),
        field('right', $.list)
      )),
      seq(
        $._expression,
        $.keyword_is,
        choice(
          $.keyword_null,
          $._not_null,
          $.keyword_true,
          $.keyword_false,
        ),
      ),
      // TODO exists/not exists (subquery)
    ),

    _expression: $ => choice(
      $._literal,
      $.field,
      $.predicate,
      $.subquery,
      $.function_call,
      $.keyword_true,
      $.keyword_false,
      $.keyword_null,
      $.case,
    ),

    string: $ => choice(
      $._single_quote_literal_string,
      $._double_quote_literal_string,
    ),

    _single_quote_literal_string: $ => seq(
      "'",
      repeat(choice(
        alias($.unescaped_single_string_fragment, $.string_fragment),
        $.escape_sequence
      )),
      "'"
    ),

    _double_quote_literal_string: $ => seq(
      '"',
      repeat(choice(
        alias($.unescaped_double_string_fragment, $.string_fragment),
        $.escape_sequence
      )),
      '"'    
    ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    number: _ => /\d+/,

    identifier: $ => choice(
      $._identifier,
      seq('`', $._identifier, '`'),
      seq('"', $._identifier, '"'),
    ),
    _identifier: _ => /([a-zA-Z_][0-9a-zA-Z_]*)/,
  }

});

function parametric_type($, type, params = ['size']) {
  return choice(
    type,
    seq(
      type,
      '(',
      // first parameter is guaranteed, shift it out of the array
      field(params.shift(), $.number),
      // then, fill in the ", next" until done
      ...params.map(p => seq(',', field(p, $.number))),
      ')',
    ),
  )
}

function param_list(field) {
  return seq(
    '(',
    field,
    repeat(
      seq(',', field)
    ),
    ')',
  )
}

function make_keyword(word) {
  return new RegExp(word + "|" + word.toUpperCase());
}
